error analysis fixes

--- a/linearSVM.ipynb
+++ b/linearSVM.ipynb
@@ -10,6 +10,7 @@
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.model_selection import cross_val_score\n",
     "from sklearn.metrics import classification_report\n",
     "from sklearn.svm import LinearSVC"
    ]
@@ -66,11 +67,14 @@
     "    svc = LinearSVC(penalty=penalty, dual=dual, max_iter=max_iter, C=C, random_state=42)\n",
     "    \n",
     "    train_vectors = vectorizer.fit_transform(X_train)\n",
-    "    print('Train vector dimensions: ', train_vectors.shape)\n",
+    "    print('Train vector dimensions:', train_vectors.shape)\n",
     "    svc_model = svc.fit(train_vectors, y_train)\n",
     "    \n",
-    "    print('Validation accuracy: ', svc_model.score(vectorizer.transform(X_validation), y_validation))\n",
-    "    \n",
+    "    print('Validation accuracy:', svc_model.score(vectorizer.transform(X_validation), y_validation))\n",
+    "    pipe = Pipeline(steps=[('tfidf', vectorizer),\n",
+    "                       ('svc', svc)])\n",
+    "    scores = cross_val_score(pipe, X_train, y_train, cv=3)\n",
+    "    print('Cross validation score:', sum(scores)/len(scores))\n",
     "    return svc_model, train_vectors, vectorizer"
    ]
   },
@@ -83,8 +87,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train vector dimensions:  (2754, 6559)\n",
-      "Validation accuracy:  0.7263843648208469\n"
+      "Train vector dimensions: (2754, 6559)\n",
+      "Validation accuracy: 0.7263843648208469\n",
+      "Cross validation score: 0.6964415395787945\n"
      ]
     }
    ],
@@ -102,12 +107,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train vector dimensions:  (2754, 3230)\n",
-      "Validation accuracy:  0.745928338762215\n"
+      "Train vector dimensions: (2754, 3230)\n",
+      "Validation accuracy: 0.745928338762215\n",
+      "Cross validation score: 0.7073347857661583\n"
      ]
     }
    ],
    "source": [
+    "# Model 1\n",
     "model, vectors, vectorizer = build_model(C=0.3, min_df=2)"
    ]
   },
@@ -120,12 +127,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train vector dimensions:  (2754, 6559)\n",
-      "Validation accuracy:  0.762214983713355\n"
+      "Train vector dimensions: (2754, 6559)\n",
+      "Validation accuracy: 0.762214983713355\n",
+      "Cross validation score: 0.7156862745098039\n"
      ]
     }
    ],
    "source": [
+    "# Model 2\n",
     "model, vectors, vectorizer = build_model(penalty='l1', dual=False)"
    ]
   },
